# chaos-bomber

./: .gitignore  Makefile  README.md  REFERENCES.md  commitmsg.txt  taqgit
Assets/: DefaultNetworkPrefabs.asset  InitTestScene09003d6e-9391-4c89-be4f-24d620b72043.unity  InitTestSceneeca1c8f4-1332-485f-b69b-eabc6cbc3b67.unity  UniversalRenderPipelineGlobalSettings.asset
Blender/: build_proto_bot.py  export_render.py
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
UIElementsSchema/: UIElements.xsd  Unity.AppUI.UI.xsd  Unity.Multiplayer.Tools.NetVis.Editor.UI.xsd  Unity.Multiplayer.Tools.NetworkProfiler.Editor.xsd  Unity.Multiplayer.Tools.NetworkSimulator.Editor.UI.xsd  Unity.Services.Core.Editor.Environments.UI.xsd  Unity.Services.Deployment.Editor.Interface.UI.Components.xsd  Unity.Services.Deployment.Editor.Interface.UI.Views.xsd  Unity.Services.Deployment.Editor.Shared.UI.DeploymentConfigInspectorFooter.xsd  Unity.Services.Multiplayer.Editor.Shared.UI.DeploymentConfigInspectorFooter.xsd  UnityEditor.Experimental.GraphView.xsd  UnityEditor.Overlays.xsd  UnityEditor.PackageManager.UI.Internal.xsd  UnityEditor.UIElements.ProjectSettings.xsd  UnityEditor.UIElements.xsd
fastlane/: Appfile  Deliverfile  Fastfile  Matchfile  Pluginfile
scripts/: convert_amiga_raw.py  extract_font.py  extract_palette.py  inspect_files.py  love2d-unpacker.py  pyproject.toml
scripts/image_font/: image_font.py
(+678 files in other folders)
